<resources>
    <string name="app_name">Food App</string>
    <string name="continuewithhuawei">Continue With Huawei</string>
    <string name="sample_account_description">Account Usage Process</string>
    <string name="sign_in">ID-Token Mode Signln</string>
    <string name="sign_out">SignOut</string>
    <string name="revokeAccess">AuthorizationCode Mode Signln</string>
    <string name="silent_sign_in">Silent SignIn</string>
    <string name="cancel_authorization">Cancel Authorization</string>
    <string name="welcome">Hos Geldiniz!</string>
    <string name="idtoken">Id Token:</string>
    <string name="AuthorizationCode">Authorization Code:</string>
    <string name="Silentsignin">Silent Signin:</string>
    <string name="Location">Location Updates:</string>
    <string name="pharmacy">Pharmacy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Location_update">Lokasyonumu Bul</string>
    <string name="Location_remove">Lokasyonumu Durdur</string>
    <string name="Kullanici_adi">Kullanici Adi :</string>
    <string name="user_Name">User name</string>
    <string name="Foodapp">Food App</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="belirtilmemis">Belirtilmemis</string>
    <string name="emailbelirtilmemis">E-Mail adresi Belirtilmemis</string>
    <string name="Premiumhesap">Premium Satin Al</string>
    <string name="Premiumfragment">Premium Hesaba Gecis</string>
    <string name="premiumprice">0.00</string>
    <string name="textPremiumgecis">Reklamlari gormek istemiyorsan,Premium hesaba gec</string>
    <string name="premiumgecildi">Premium hesaba gecildi</string>
    <string name="publickey">MIIBojANBgkqhkiG9w0BAQEFAAOCAY8AMIIBigKCAYEAvD6Mlg2WdIClqfjQawsz+bx65tuVRrV2ylua1BIzBlY3GqU1+jNjhO1s1LiN1ZBt4pkResjc+9sii6q/ZLt0tnoSEYbSciYPrnWFl9+YzSSJ6a3nXIGtVnpZSy3Qmb2wSBG7kN4C2STFDbLxYp3d0XgUBmhQRb36BsHRIdg2zHsCLoIpMKh7Cm4/5cNnQ/coLvR1v8VyVrk4C8fpQk4mh1QKQf+6UP9ut/HpiF222RheWVxmyTVvOUtnkjoNl2sQywUkdMnza+v+7Yuk5q+AIozrwmITDyobqozZ+Clniwn6eoPDi28ax24xaBSj3R5e4TDz411GjuCHmwMT2Eu3oC4swssuYD2y4XIDl01mheQtYgAg8QMvCSPWZ9oqT0YjKabqltw3odUndlav1FqTAmRhP5hIQ5JPyFOJQMi0reP74bp55mSxmBAIn36R0+CWNW1PpZLuo+KgNuUvcJm/ecptAhgn52nVbRMiXBpsbqLpgT+lI+Tx9Co2phMm4zHZAgMBAAE=</string>

</resources>