<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraitLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ProfileFragment">

    <Button
        android:id="@+id/btnPremium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="132dp"
        android:text="@string/Premiumhesap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/user_Name"
        android:textColor="#FF0000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUser" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/ButtonStyle"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/borderbutton"
        android:drawableEnd="@drawable/cancel"
        android:text="@string/cancel_authorization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignout" />

    <Button
        android:id="@+id/btnSignout"
        style="@style/ButtonStyle"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="240dp"
        android:background="@drawable/borderbutton"
        android:drawableEnd="@drawable/cancelauth"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPremium"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="135dp"
        android:layout_height="131dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="140dp"
        android:text="E-mail"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGender" />

</androidx.constraintlayout.widget.ConstraintLayout>